# CppNet2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/CppNet2/: Config.hpp  Property.hpp  System.hpp
include/CppNet2/Details/: Endian.hpp  Hash32.hpp  Sign.hpp
include/CppNet2/System/: ArgumentException.hpp  Boolean.hpp  Char.hpp  Collections.hpp  Double.hpp  Exception.hpp  ICloneable.hpp  IComparable.hpp  IDisposable.hpp  IEquatable.hpp  Int32.hpp  Object.hpp  String.hpp
include/CppNet2/System/Collections/: Generic.hpp
include/CppNet2/System/Collections/Generic/: IEnumerable.hpp  IEnumerator.hpp  IReadOnlyEnumerable.hpp  IReadOnlyEnumerator.hpp
src/Details/: Endian.cpp  Hash32.cpp
src/System/: ArgumentException.cpp  Boolean.cpp  Char.cpp  Double.cpp  Exception.cpp  Int32.cpp  Object.cpp  String.cpp
